syntax = "proto3";

package basetypes.appuser.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/basetypes/appuser/v1";

enum ResetUserMethod {
  DefaultUserResetMethod = 0;

  Normal = 10;
  Link = 20; // send email or mobile link
}
